# agentic-ops-platform

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: codeql.yml  dependency-review.yml  python.yml  release-please.yml  sbom.yml  scorecard.yml  secret-scan.yml  terraform.yml  trivy.yml
agents/: README.md  pyproject.toml
agents/aop_common/: __init__.py  action_client.py  audit.py  config.py  mcp_tools.py  memory.py  models.py  policy_client.py  schemas.py  slack_emitter.py  triage.py
agents/aop_decommission/: README.md  __init__.py  agent.py  campaign.py  executor.py  exemptions.example.yaml  exemptions.py  inventory.py  planner.py  prompts.py  report.py  schemas.py  validation.py
agents/aop_devsecops/: README.md  __init__.py  agent.py  prompts.py
agents/aop_finops/: README.md  __init__.py  agent.py  prompts.py
agents/aop_orchestrator/: README.md  __init__.py  agent.py  prompts.py
agents/aop_platform/: README.md  __init__.py  agent.py  prompts.py
agents/aop_sre/: README.md  __init__.py  agent.py  prompts.py
agents/deployment/: deploy.py
agents/tests/: conftest.py  test_decommission_campaign.py  test_decommission_domain.py  test_decommission_executor.py  test_decommission_exemptions.py  test_decommission_inventory.py  test_decommission_planner.py  test_decommission_report.py  test_decommission_validation.py  test_memory.py  test_triage.py
docs/: AGENT_GOVERNANCE_FRAMEWORK.md  DEFENSIVE-OPERATIONS.md  DESIGN-REVIEW.md  GOVERNANCE-MAPPING.md  aibom.yaml
docs/deployment/: AGENT-DEPLOY.md  COST-ESTIMATE.md  DEPLOYMENT-LOG.md  GCLOUD-COMMANDS.md  MCP-SERVERS.md  README.md  REQUIRED-APIS.md  RETROSPECTIVE.md
scripts/: preflight.sh
scripts/lib/: preflight_common.sh  preflight_gcp.sh  preflight_iam.sh  preflight_naming.sh  preflight_state.sh
services/: README.md  cloudbuild.yaml
services/action-broker/: Dockerfile  README.md  broker.py  events.py  idempotency.py  impersonation.py  main.py  policy.py  pyproject.toml  schemas.py
services/action-broker/executors/: __init__.py  cloud_run_restart_revision.py  cloud_run_rollback_to_previous.py  cloud_run_scale_within_range.py  cost_shrink_idle_resource.py  decommission_delete_resource.py  iam_disable_service_account_key.py  incident_escalate_to_human.py  scc_mute_finding.py  secret_manager_disable_version.py  terraform_destroy_target.py  terraform_plan.py  workflows_run.py
services/action-broker/policy/: action_classes.yaml
services/action-broker/tests/: conftest.py  test_broker.py  test_decommission_executors.py  test_idempotency.py  test_impersonation.py  test_policy.py
services/slack-notifier/: Dockerfile  README.md  blockkit.py  interactivity.py  main.py  notifier.py  pyproject.toml  redaction.py  schemas.py  signature.py
services/slack-notifier/tests/: conftest.py  test_blockkit.py  test_interactivity.py  test_redaction.py  test_signature.py
terraform/: FRAMEWORK.md  README.md
terraform/bootstrap/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
terraform/environments/dev/: README.md  backend.tf  main.tf  terraform.tfvars  variables.tf
terraform/environments/prod/: .terraform.lock.hcl  README.md  backend.tf  main.tf  terraform.tfvars  variables.tf  versions.tf
terraform/environments/sandbox/: .terraform.lock.hcl  README.md  main.tf  providers.tf  terraform.tfvars  variables.tf  versions.tf
terraform/examples/downstream-consumer/: README.md  backend.tf.example  main.tf  outputs.tf  variables.tf
terraform/examples/full-dev/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
terraform/examples/minimal-sre-only/: README.md  main.tf  variables.tf
terraform/examples/prod-locked-down/: README.md  main.tf  providers.tf  variables.tf
terraform/examples/staging/: README.md  main.tf  providers.tf  variables.tf
terraform/modules/action-broker/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/agent-runtime/: .tflint.hcl  README.md  main.tf  outputs.tf  variables.tf
terraform/modules/agents/_base/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/agents/decommission/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/agents/devsecops/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/agents/finops/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/agents/orchestrator/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/agents/platform/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/agents/sre/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/aop-platform/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/eventing/: .tflint.hcl  README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/foundation/: .tflint.hcl  README.md  main.tf  outputs.tf  variables.tf
terraform/modules/governance/: .tflint.hcl  README.md  main.tf  outputs.tf  variables.tf
terraform/modules/observability/: .tflint.hcl  README.md  main.tf  outputs.tf  variables.tf
terraform/modules/slack-notifier/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/tests/: .terraform.lock.hcl  README.md  agents.tftest.hcl  composition.tftest.hcl  framework.tftest.hcl  platform_layers.tftest.hcl  providers.tf
