# Action Broker — Cloud Run service. The single policy-gated execution surface
# for agent write actions.
#
# Managed by uv. To install the deps and create a venv:
#     uv sync
#
# To run locally in dry-run (executors raise NotImplementedError, events log only):
#     LIVE_MODE=false uv run uvicorn main:app --reload --port 8080
#
# To bump the lockfile after editing dependencies:
#     uv lock

[project]
name = "aop-action-broker"
version = "0.1.0"
description = "AOP Action Broker — the single policy-gated execution surface for agent write actions."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [
    { name = "Agentic Operations Platform contributors" },
]

dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    # Floor the transitive Starlette to the BadHost fix (CVE-2026-48710); fastapi
    # 0.136.3 already resolves >=1.0.1 — this keeps a future re-lock from regressing it.
    "starlette>=1.0.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "google-cloud-pubsub>=2.21",
    "google-cloud-firestore>=2.16",
    "google-cloud-iam>=2.15",
    "google-auth>=2.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

# This is an application, not a library — uv should not try to build a wheel.
[tool.uv]
package = false
